[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

[dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }

[dependencies.web-sys]
version = "0.3"
features = [
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlProgram',
  'WebGlRenderingContext',
  'WebGlShader',
  'WebGlUniformLocation',
]